--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/node": "^20.10.7",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "tslib": "^2.6.2"
   }
 }
